feat: 0.4.0